<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceOrderActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="6dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_name_background"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/coffeeTypeTextView"
        android:layout_width="160dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:text="@string/coffee_type"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <RadioGroup
        android:id="@+id/coffeeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coffeeTypeTextView">

        <RadioButton
            android:id="@+id/coffee_expresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/espresso"
            android:textColor="@color/colorPrimary"
            android:checked="true"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/coffee_capetuno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/capetuno"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/coffee_latte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/latte"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/cupSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:text="@string/cup_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coffeeRadioGroup"
        android:textSize="22sp"
        android:layout_marginStart="16dp"
        android:padding="6dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/cupSizeButtonLayoutView"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cupSizeTextView"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/regularSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_unclicked"
            android:text="@string/regular"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/mediumSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textAllCaps="false"
            android:background="@drawable/button_unclicked"/>
        <Button
            android:id="@+id/largeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/large"
            android:background="@drawable/button_unclicked"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/totalAmountLayout"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cupSizeButtonLayoutView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:id="@+id/totalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="22sp"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"
            android:text="550.00"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>

    <Button
        android:id="@+id/placeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalAmountLayout"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:text="@string/place_order"
        android:textSize="15sp"
        android:padding="5dp"
        android:background="@drawable/button_place_order"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalAmountLayout"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:padding="5dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>